--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,12 @@
 add_executable(sample_test
     sha256_test.cpp
     hasher_test.cpp 
-    chunker_test.cpp
+    chunker_test.cpp 
+    storage_repository_test.cpp 
+    backup_orchestrator_test.cpp 
+    metadata_storage_test.cpp
 )
+
 
 target_link_libraries(sample_test
     PRIVATE
